--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,12 @@
-# theme: jekyll-theme-minimal
-# title: my homepage
-# description: test
+# Site settings
+title: 
+email:
+description: 
+baseurl:
+url:
+twitter_username:
+github_username:  
+
+# Build settings
+markdown: kramdown
+permalink: pretty
