--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,3 @@
-# Site settings
-title: 
-email:
-description: 
-baseurl:
-url:
-twitter_username:
-github_username:  
-
-# Build settings
-markdown: kramdown
-permalink: pretty
+theme: jekyll-theme-minimal
+title: Octocat's homepage
+description: Bookmark this to keep an eye on my project updates!
